--- a/BigNum/BigNum/BigNum.vcxproj.filters
+++ b/BigNum/BigNum/BigNum.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Deque.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BigNumCpu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
