--- a/BigNum/BigNum/BigNum.vcxproj
+++ b/BigNum/BigNum/BigNum.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Deque.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BigNum.cpp" />
