Expanded Deque, BigNumCpu::ToString, Bug Flushing

--- a/BigNum/BigNum/BigNum.vcxproj.filters
+++ b/BigNum/BigNum/BigNum.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="BigNum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
